--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
                         <br>
                         <br>
                         <form method="post" action="/login">
-                           <input type="text" class="form-control" name="Username" placeholder="Username">
+                           <input type="text" class="form-control" name="username" placeholder="Username">
                            <br>
-                           <input type="text" class="form-control" name="Password" placeholder="Password">
+                           <input type="text" class="form-control" name="password" placeholder="Password">
                            <br>
                            <button type="submit" class="btn btn-default">login</button>
                         </form>
